# gini_cli

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: index.html
src/: main.rs
