[package]
name = "gini"
version = "0.1.4"
edition = "2021"
authors = ["Somendra Jaat Somendra830@gmail.com"]
description = "A lightweight CLI tool for saving and restoring project checkpoints. Think of it as mini git snapshots."
license = "MIT"
repository = "https://github.com/somendrajaat/gini_cli"
keywords = ["cli", "backup", "snapshot", "git", "project-management"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
fs_extra = "1.3"
