[package]
name = "gini"
version = "0.1.7"
edition = "2025"
authors = ["Somendra Jaat Somendra830@gmail.com"]
description = "A lightweight CLI tool for saving and restoring project checkpoints. Think of it as mini git snapshots."
license = "MIT"
repository = "https://github.com/somendrajaat/gini_cli"
keywords = ["cli", "backup", "snapshot", "git", "project-management"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
fs_extra = "1.3"
dialoguer = "0.11.0"
anyhow = "1.0"
flate2 = "1.0"
sha1 = "0.10"
hex = "0.4"
